# instagram-to-sqlite

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: ci.yml
assets/css/: style.scss
instagram_to_sqlite/: _typing.py  cli.py  utils.py
tests/: test_create_zip.py  test_my_chats.py
tests/zip_contents/messages/inbox/gavin_osatf9tyla/: message_1.json
